@startuml clases-catalogo

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam class {
  BackgroundColor<<contexto>> #F4F4F4
  BorderColor<<contexto>> #9E9E9E
  FontColor<<contexto>> #555555
}
hide empty members

class Proveedor {
  - id: UUID
  - nombreComercial: String
  - ruc: String
  - fechaAlta: DateTime
  - activo: boolean
  - horaMaximaRetiro: Time
  - cuentaBancariaDestino: String
  - credencialesComercioCifradas: String
  + configurarHoraMaximaRetiro(h: Time): void
}

class PuntoDeEntrega {
  - id: UUID
  - nombre: String
  - ubicacion: String
}

class Plato {
  - id: UUID
  - nombre: String
  - descripcion: String
  - precio: Money
  - stockDisponible: int
  - stockSincronizadoEn: DateTime
  - version: int
  - activo: boolean
  + hayStock(cantidad: int): boolean
  + reservarStock(cantidad: int): boolean
}

class InventarioReservado {
  - id: UUID
  - cupoAsignado: int
  - cupoConsumido: int
  - version: int
  - fechaVigencia: Date
  + disponible(): int
  + asignarCupo(cantidad: int): void
  + consumir(cantidad: int): boolean
}

class Administrador <<contexto>>
class Operador <<contexto>>
class IntegracionERP <<contexto>>
class ProgramaFidelidad <<contexto>>

note bottom of InventarioReservado
  Cupo **exclusivo para Aliflow** que el proveedor aparta de su producción
  (de 100 almuerzos: 75 caja, 25 Aliflow). La disponibilidad vendible es el
  **mínimo entre `disponible()` y `Plato.stockDisponible`** sincronizado del ERP:
  doble control. El **descuento transaccional se aplica sobre el cupo**, con
  `version` como bloqueo optimista; si el stock del ERP está vencido, se valida
  solo contra el cupo y la venta no se interrumpe.
end note

Proveedor "1" *-- "1..*" Administrador : gerencia el local
Proveedor "1" *-- "0..*" Operador : personal de entrega
Proveedor "1" *-- "0..*" PuntoDeEntrega
Proveedor "1" *-- "0..*" Plato : menú
Proveedor "1" *-- "1" IntegracionERP
Proveedor "1" *-- "0..1" ProgramaFidelidad
Plato "1" *-- "0..1" InventarioReservado : cupo Aliflow
Operador "0..*" --> "1" PuntoDeEntrega : trabaja en

@enduml
